fix: add overflow-hidden on .left

--- a/app/components/about-section/index.module.css
+++ b/app/components/about-section/index.module.css
@@ -165,6 +165,7 @@
         width: 100%;
         overflow-y: auto;
         position: relative;
+        overflow-x: hidden;
     }
 
     .leftPersona {
